infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manger-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: manager.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manager-service
                port:
                  number: 4000
